test/fail/import/import_within_function.lly
#[
SyntaxError: Cannot import a file here.
Where: File "import_within_function.lly" at line 7
]#

define f() {
    import empty.lly
}
